--- a/index.html
+++ b/index.html
@@ -8,62 +8,38 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="images/logostarfood.png" alt="">ACTIVE BREAKS</a>
+        <a href="#" class="logo"><img src="images/running.png" alt="">ACTIVE BREAKS</a>
         <nav class="menu">
             <a href="">Home</a>
             <a href="">About</a>
-            <a href="">Review</a>
+            <a href="">Support</a>
         </nav>
     </header>
 
     <section class="home">
         <div class="content">
             <div class="content-left">
-                <img src="" alt="">
+                <img src="images/ilustrasi.jpg" alt="">
             </div>
 
             <div class="content-right">
-                <h2></h2>
+                <h1>Tetap Sehat Dengan Active Breaks</h1>
                 <p>
-                    bfiehiskdnkshahwn
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    1Corrupti odio magnam quasi esse est corporis obcaecati labore minus expedita aliquid,officia rerum maiores maxime quis accusamus quae et quidem velit. 
+                    <a href="#about"><button>Selengkapnya</button></a>
                 </p>
-                <a href="#about"><button>Selengkapnya</button></a>
+                </div>
             </div>
         </div>
     </section>
-    <section class="about">
-        <div class="content">
-            <div class="content-right">
-                <h2>MAKANAN NUSANTARA</h2>
-            </div>
-        </div>
-        
 
+    <section class="about">
     </section>
     <section class="support">
     </section>
 
-    <section class="footer">
-           <div class="box-container">
-                <div class="box">
-                    <h3>related links</h3>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                </div>ssss
-
-                <div class="box"></div>
-                    <h3>contact info</h3>
-                    <a href="">starfood40.@gmail.com</a>
-                    <a href="">089668707844</a>
-                    <a href="">gandasoli,kuningan</a>
-                    
-                <div class="box"></div>
-                    <h3>social media</h3>
-                    <a href="">Temukan di facebook</a>
-                    <a href="">starfoodid_</a>
-                    <a href="">suscribe di youtube</a>
-           </div> 
-    </section>
+    <footer>
+    </footer>
 </body>
 </html>
