--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACTIVE BREAKS - SOLUSI HIDUP SEHAT DENGAN TEKNOLOGI!</title>
+    <title>STARFOOD- LESTARIKAN MAKANAN NUSANTARA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="images/logostarfood.png" alt="">ACTIVE BREAKS</a>
+        <a href="#" class="logo"><img src="images/logostarfood.png" alt="">STARFOOD</a>
         <nav class="menu">
             <a href="">Home</a>
             <a href="">About</a>
