--- a/index.html
+++ b/index.html
@@ -34,20 +34,39 @@
     <section class="about">
         <div class="content">
             <div class="content-left">
-                <img src="images/kun.png" alt="">
+                <img src="images/Makanan khas provinsi.jpeg" alt="">
             </div>
             <div class="content-right">
                 <h2>MAKANAN NUSANTARA</h2>
                 <p>
                     Kuliner tradisional Indonesia adalah ragam jenis masakan yang berasal dari berbagai daerah di seluruh Negara Kesatuan Republik Indonesia.
+                    Masakan ini mencerminkan keanekaragaman budaya, tradisi, dan kekayaan alam Indonesia yang tersebar di lebih dari 17.000 pulau. Setiap daerah memiliki cita rasa, bahan, dan cara pengolahan yang khas, seringkali dipengaruhi oleh faktor geografis, budaya, dan sejarah.
+                    Hampir seluruh masakan Indonesia kaya dengan bumbu berasal dari rempah-rempah seperti kemiri, cabai, temu kunci, lengkuas, jahe, kencur, kunyit, kelapa dan gula aren dengan diikuti penggunaan teknik-teknik memasak menurut bahan
                 </p>
             </div>
         </div>
-
-        
-
     </section>
-    <section class="support">
+
+    <section class="review">
+        <div class="content">
+            <div class="content-left">
+                <h2>NAMA-NAMA MAKANAN </h2>
+                <p>
+                    Berikut adalah beberapa ciri khas utama makanan Nusantara:
+                </p>
+                <ul>
+                    <li>Kaya Akan Rempah-Rempah</li>
+                    <li>Beragam Rasa</li>
+                    <li>Variasi Sesuai Daerah</li>
+                    <li>Berbasis Makanan Pokok</li>
+                    <li>Hidangan Berlapis (Nasi dan Lauk)</li>
+                    <li>Sambal sebagai Pelengkap</li>
+                    <li>Teknik Masak Beragam</li>
+                    <li>Memanfaatkan Bahan Lokal</li>
+                </ul>
+            </div>
+        </div>
+
     </section>
 
     <section class="footer">
